# AirCon

./: CMakeLists.txt  README.md  build.sh  clean_build.sh
src/: config.h
src/client/: main.cpp
src/iolib/: gpio.h  utils.h
src/remote/: main.cpp
